# aurorawm

./: Cargo.toml  LICENSE  Makefile  README.md  aurorawm-session  aurorawm.desktop  aurorawm.service  errors.txt  install.sh  uninstall.sh
src/: compositor.rs  config.rs  input.rs  layout.rs  main.rs  output.rs  render.rs  shell.rs  standalone.rs  state.rs  utils.rs
