[package]
name = "aurorawm"
version = "0.1.0"
edition = "2021"
authors = ["AuroraWM Contributors"]
description = "A fast, reliable, and beautiful Wayland compositor"
license = "MIT"
repository = "https://github.com/yourusername/aurorawm"
keywords = ["wayland", "compositor", "window-manager", "linux"]
categories = ["gui"]

[dependencies]
smithay = { version = "0.7", features = ["backend_winit", "renderer_gl", "backend_udev", "backend_libinput", "backend_session", "backend_drm", "backend_gbm", "backend_session_libseat"] }
wayland-server = "0.31"
wayland-sys = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["server", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
winit = { version = "0.30", features = ["rwh_06", "x11", "wayland"] }
xkbcommon = "0.6"
input = "0.8"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "ioctl", "process", "signal", "socket", "term"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"
indexmap = "2.2"
rand = "0.8"
png = "0.17"
image = "0.24"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
shellexpand = "3.1"
dirs = "5.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
